RESOLVED FIXED191485
[MSE] Frame re-ordering can cause iframes to never be enqueued
https://bugs.webkit.org/show_bug.cgi?id=191485
Summary [MSE] Frame re-ordering can cause iframes to never be enqueued
Jer Noble
Reported 2018-11-09 13:25:38 PST
[MSE] Frame re-ordering can cause iframes to never be enqueued
Attachments
Patch (8.40 KB, patch)
2018-11-09 13:29 PST, Jer Noble
no flags
Patch for landing (8.40 KB, patch)
2018-11-09 14:06 PST, Jer Noble
no flags
Patch for landing (8.07 KB, patch)
2018-11-10 10:10 PST, Jer Noble
no flags
Patch for landing (8.08 KB, patch)
2018-11-10 10:31 PST, Jer Noble
no flags
Patch (10.77 KB, patch)
2018-11-10 11:20 PST, Jer Noble
no flags
Patch for landing (6.27 KB, patch)
2018-11-10 12:20 PST, Jer Noble
no flags
Patch for landing (11.31 KB, patch)
2018-11-12 06:34 PST, Jer Noble
no flags
Jer Noble
Comment 1 2018-11-09 13:29:16 PST
Eric Carlson
Comment 2 2018-11-09 13:31:49 PST
Comment on attachment 354378 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=354378&action=review > Source/WebCore/ChangeLog:13 > + DTS overlaps an existing sample, but the the presentation timestamp does not. Nit: s/the the/the/ > LayoutTests/media/media-source/media-source-dropped-iframe.html:4 > + <title>mock-media-source</title> Nit: this isn't terribly descriptive
Jer Noble
Comment 3 2018-11-09 14:06:35 PST
Created attachment 354383 [details] Patch for landing
Jer Noble
Comment 4 2018-11-10 10:10:27 PST
Created attachment 354458 [details] Patch for landing
Jer Noble
Comment 5 2018-11-10 10:31:04 PST
Created attachment 354461 [details] Patch for landing
Jer Noble
Comment 6 2018-11-10 11:20:55 PST
Jer Noble
Comment 7 2018-11-10 12:20:26 PST
Created attachment 354470 [details] Patch for landing
Jer Noble
Comment 8 2018-11-12 06:34:56 PST
Created attachment 354555 [details] Patch for landing
WebKit Commit Bot
Comment 9 2018-11-12 07:12:42 PST
Comment on attachment 354555 [details] Patch for landing Clearing flags on attachment: 354555 Committed r238086: <https://trac.webkit.org/changeset/238086>
WebKit Commit Bot
Comment 10 2018-11-12 07:12:44 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2018-11-12 07:13:27 PST
Note You need to log in before you can comment on or make changes to this bug.